# DistanceQuery

./: CMakeLists.txt  README.md  main.cu  render.cu  render.h
distanceQuery/: CMakeLists.txt
distanceQuery/App/: Application.h  DistanceQuery.cpp  DistanceQuery.h  ObjLoader.h
distanceQuery/CudaBase/: helper_cuda.h  helper_functions.h  helper_image.h  helper_math.h  helper_timer.h
distanceQuery/MyCuda/: CudaGLInterp.cpp  CudaGLInterp.h  MainCodeBuildBVH.cu  MainCodeBuildBVH.cuh  MainCodeDistanceQuery.cu  MainCodeDistanceQuery.cuh  TempData.cu  TempData.cuh  Timer.cuh  TriDist.cuh  TriDistance.cuh  Type.cuh  utils.cu  utils.cuh
render/: CMakeLists.txt
render/assets/setting/: setting.txt
render/assets/shaders/: FragmentShader.glsl  FragmentShader_Line.glsl  VertexShader.glsl  VertexShader_Line.glsl
render/assets/text/: ui-utf8.txt
render/src/: Camera.cpp  GLProgram.cpp  Model.cpp  ModelRender.cpp  Shader.cpp  glad.c
render/src/include/: Camera.h  GLProgram.h  Model.h  ModelMatrix.h  ModelRender.h  Shader.h  TextLoader.h
